[package]
name = "dt-master"
version = "0.1.0"
authors = ["Francisco Knebel <franciscopaivaknebel@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "2.0"
actix-rt = "1.1.0"

[dev-dependencies]
cargo-run-script = "0.1.0"
cargo-watch = "7.3.0"

[package.metadata.scripts]
watch = "cargo-watch -x run"
