[package]
name = "dt-master"
version = "0.1.0"
authors = ["Francisco Knebel <franciscopaivaknebel@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.0.0-alpha.2"
actix-rt = "1.1.1"
cdrs = { version = "2" }
cdrs_helpers_derive = "0.3.3"
serde = "1.0.106"
bson = "0.14.1"
lazy_static = "1.4.0"
serde_json = "1.0.51"
jsonwebtoken = "7.1.0"
chrono = "0.4.11"
rust-crypto = "0.2.36"
uuid = { version = "0.8", features = ["serde", "v4"] }
futures = "0.3.4"
dotenv = "0.15.0"
envy = "0.4.1"
serde_derive = "1.0.110"
log = "0.4.8"
env_logger = "0.7.1"

[dev-dependencies]
cargo-run-script = "0.1.0"
cargo-watch = "7.3.0"

[package.metadata.scripts]
watch = "cargo-watch -x run"
